Move to new CI and cleanup panel config

--- a/roles/pterodactyl_panel/handlers/main.yml
+++ b/roles/pterodactyl_panel/handlers/main.yml
@@ -9,3 +9,8 @@
   systemd:
     name: apache2
     state: restarted
+
+- name: Restart schedule service
+  systemd:
+    name: pterosched.service
+    state: restarted
