--- a/roles/pterodactyl_wings/tasks/docker_stable.yml
+++ b/roles/pterodactyl_wings/tasks/docker_stable.yml
@@ -12,14 +12,26 @@
     name: "{{ _pterodactyl_wings_docker_distro_packages }}"
     state: absent
 
-- name: Add docker.com key
+- name: Old docker.com key in central keyring is absent
   apt_key:
     id: 9DC858229FC7DD38854AE2D88D81803C0EBFCD88
-    url: https://download.docker.com/linux/ubuntu/gpg
+    state: absent
+- name: /etc/apt/keyrings exists
+  file:
+    state: directory
+    name: /etc/apt/keyrings
+    mode: "755"
+    owner: root
+    group: root
+- name: docker.com key is in repo-specific keyring
+  apt_key:
+    id: 9DC858229FC7DD38854AE2D88D81803C0EBFCD88
+    url: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg"
+    keyring: /etc/apt/keyrings/docker.gpg
 
 - name: Add docker.com repository
   apt_repository:
-    repo: "deb https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
+    repo: "deb [signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/{{ ansible_distribution | lower }} {{ ansible_distribution_release }} stable"
     update_cache: yes
 
 - name: Install docker from the docker.com repository
