--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,20 @@
-# Module deps, useful for editor intellisense, etc.
-ansible-core==2.15.2
+# Requirements for developing this collection
+# Includes utilities, CLI helpers and so on
 
 # Linting & Formatting
 ansible-lint==6.17.2
-pylint==2.17.5
+pylint==2.17.4
 autopep8==2.0.2
 pre-commit==3.3.3
 
-# Testing
+# Test scenario runner
 tox==3.28.0
 
-# Utility packages needed for scripts
-pyyaml==6.0.1
+# Utility packages used in scripts
+pyyaml==6.0.0
 packaging==23.1
+
+# Also include a version of ansible-core for IDE hints and such.
+# Note that this version is independent of the one used in tests, see tox.ini
+# and /tests
+ansible-core==2.15.1
