--- a/tox.ini
+++ b/tox.ini
@@ -1,25 +1,65 @@
 [tox]
-envlist=lint
+# plugin tests: run plugin tests with these ansible versions
+# Uncomment when we add plugins
+#envlist = py3-ansible{213,214,215}-test-{sanity,integration}
 requires =
     tox-ansible>=1.8,<2
     tox<4
 skipsdist = True
 
 [ansible]
-ansible_test_platform=posargs
-# only used in role scenario tests
-ansible = 5,6,7
+# Role tests config: we test roles with these ansible/py versions
+ansible = 6,7,8
 python = 3
+scenario_format = $path-$parent-$nondefault_name
 
 [testenv]
 passenv =
     HOME
 setenv =
+    # Set the ansible version for plugin tests
+    ansible213: ANSIBLE_VERSION = 2.13
+    ansible214: ANSIBLE_VERSION = 2.14
+    ansible215: ANSIBLE_VERSION = 2.15
+    # Visualization
     PY_COLORS = 1
     ANSIBLE_FORCE_COLOR = 1
-    # Enable podman for ansible-test instead of docker
-    ANSIBLE_TEST_PREFER_PODMAN = 1
 
-[testenv:sanity]
-# Pin ansible-test/core version to latest stable release, same as used for development
-deps = -rrequirements.txt
+#[testenv:py3-ansible{213,214,215}-test-sanity]
+#whitelist_externals =
+#    docker
+#changedir = tests/sanity
+#commands_pre =
+#    docker compose down
+#commands =
+#    docker compose run --no-TTY --rm test-runner
+#commands_post =
+#    # cleanup networks
+#    docker compose down --remove-orphans
+#
+#[testenv:py3-ansible{213,214,215}-test-units]
+#whitelist_externals =
+#    docker
+#changedir = tests/unit
+#commands_pre =
+#    docker compose down
+#commands =
+#    docker compose run --no-TTY --rm test-runner
+#commands_post =
+#    # cleanup networks
+#    docker compose down --remove-orphans
+#[testenv:py3-ansible{213,214,215}-test-integration]
+#whitelist_externals =
+#    docker
+#changedir = tests/integration
+#commands_pre =
+#    docker compose -f docker-compose-local.yml down
+#    docker compose -f docker-compose-remote.yml down
+#commands =
+#    docker compose -f docker-compose-local.yml build
+#    docker compose -f docker-compose-local.yml run --no-TTY --rm test-runner-local
+#    docker compose -f docker-compose-remote.yml run --no-TTY --rm test-runner-remote
+#commands_post =
+#    # cleanup networks
+#    docker compose -f docker-compose-local.yml down --remove-orphans
+#    docker compose -f docker-compose-remote.yml down --remove-orphans
