switch to pytest for testing

--- a/roles/pterodactyl_panel/molecule/default/molecule.yml
+++ b/roles/pterodactyl_panel/molecule/default/molecule.yml
@@ -4,10 +4,14 @@ platforms:
     image: "docker.io/geerlingguy/docker-ubuntu2204-ansible"
     groups:
       - panel
-    systemd: always
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
+    cgroupns_mode: host
+    privileged: true
     override_command: false
     pre_build_image: true
-    network: molecule-pterodactyl-panel
+    networks:
+      - name: molecule-pterodactyl-panel
   - name: pterodactyl-panel-ubuntu-22-db
     image: docker.io/mariadb
     pre_build_image: true
@@ -17,17 +21,22 @@ platforms:
       MYSQL_DATABASE: panel_molecule
       MYSQL_USER: panel_molecule
       MYSQL_PASSWORD: panel_molecule
-    network: molecule-pterodactyl-panel
+    networks:
+      - name: molecule-pterodactyl-panel
 
   - name: pterodactyl-panel-ubuntu-20
     image: "docker.io/geerlingguy/docker-ubuntu2004-ansible"
     groups:
       - panel
       - php7
-    systemd: always
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
+    cgroupns_mode: host
+    privileged: true
     override_command: false
     pre_build_image: true
-    network: molecule-pterodactyl-panel
+    networks:
+      - name: molecule-pterodactyl-panel
   - name: pterodactyl-panel-ubuntu-20-db
     image: docker.io/mariadb
     pre_build_image: true
@@ -37,16 +46,21 @@ platforms:
       MYSQL_DATABASE: panel_molecule
       MYSQL_USER: panel_molecule
       MYSQL_PASSWORD: panel_molecule
-    network: molecule-pterodactyl-panel
+    networks:
+      - name: molecule-pterodactyl-panel
 
   - name: pterodactyl-panel-debian-12
     image: "docker.io/geerlingguy/docker-debian12-ansible"
     groups:
       - panel
-    systemd: always
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
+    cgroupns_mode: host
+    privileged: true
     override_command: false
     pre_build_image: true
-    network: molecule-pterodactyl-panel
+    networks:
+      - name: molecule-pterodactyl-panel
   - name: pterodactyl-panel-debian-12-db
     image: docker.io/mariadb
     pre_build_image: true
@@ -56,17 +70,22 @@ platforms:
       MYSQL_DATABASE: panel_molecule
       MYSQL_USER: panel_molecule
       MYSQL_PASSWORD: panel_molecule
-    network: molecule-pterodactyl-panel
+    networks:
+      - name: molecule-pterodactyl-panel
 
   - name: pterodactyl-panel-debian-11
     image: "docker.io/geerlingguy/docker-debian11-ansible"
     groups:
       - panel
       - php7
-    systemd: always
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
+    cgroupns_mode: host
+    privileged: true
     override_command: false
     pre_build_image: true
-    network: molecule-pterodactyl-panel
+    networks:
+      - name: molecule-pterodactyl-panel
   - name: pterodactyl-panel-debian-11-db
     image: docker.io/mariadb
     pre_build_image: true
@@ -76,7 +95,8 @@ platforms:
       MYSQL_DATABASE: panel_molecule
       MYSQL_USER: panel_molecule
       MYSQL_PASSWORD: panel_molecule
-    network: molecule-pterodactyl-panel
+    networks:
+      - name: molecule-pterodactyl-panel
 
 provisioner:
   inventory:
