--- a/.gitignore
+++ b/.gitignore
@@ -145,5 +145,12 @@ dmypy.json
 
 # Ansible collection archives
 *.tar.gz
-# Adding this to gitignore breaks ansible-test. so let's not do that
-#ansible_collections/
+docs/ansible_collections/
+
+# Don't commit ephermal integration config
+tests/integration/integration_config.yml
+collections
+
+# CI files
+results
+split-tests
