--- a/roles/pterodactyl_wings/molecule/default/molecule.yml
+++ b/roles/pterodactyl_wings/molecule/default/molecule.yml
@@ -3,56 +3,66 @@ platforms:
   - name: pterodactyl-wings-ubuntu-22
     image: "docker.io/geerlingguy/docker-ubuntu2204-ansible"
     volumes:
-      # The wings daemon needs to connect to a docker/podman daemon. We use a sibling setup
+      # The wings daemon needs to connect to a docker daemon. We use a sibling setup
       # to allow the wings containers to access the host docker daemon by passing through the docker socket
-      - /var/run/podman/podman.sock:/tmp/podman.sock
+      - /var/run/docker.sock:/tmp/docker.sock
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
     env:
       # The /tmp/sock workaround is required due to this issue: https://github.com/ansible-community/molecule/issues/1568
-      DOCKER_HOST: /tmp/podman.sock
-    systemd: always
+      DOCKER_HOST: /tmp/docker.sock
+    cgroupns_mode: host
+    privileged: true
     override_command: false
     pre_build_image: true
 
   - name: pterodactyl-wings-ubuntu-20
     image: "docker.io/geerlingguy/docker-ubuntu2004-ansible"
     volumes:
-      # The wings daemon needs to connect to a docker/podman daemon. We use a sibling setup
+      # The wings daemon needs to connect to a docker daemon. We use a sibling setup
       # to allow the wings containers to access the host docker daemon by passing through the docker socket
-      - /var/run/podman/podman.sock:/tmp/podman.sock
+      - /var/run/docker.sock:/tmp/docker.sock
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
     env:
       # The /tmp/sock workaround is required due to this issue: https://github.com/ansible-community/molecule/issues/1568
-      DOCKER_HOST: /tmp/podman.sock
-    systemd: always
+      DOCKER_HOST: /tmp/docker.sock
+    cgroupns_mode: host
+    privileged: true
     override_command: false
     pre_build_image: true
 
   - name: pterodactyl-wings-debian-12
     image: "docker.io/geerlingguy/docker-debian12-ansible"
     volumes:
-      - /var/run/podman/podman.sock:/tmp/podman.sock
+      - /var/run/docker.sock:/tmp/docker.sock
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
     env:
-      DOCKER_HOST: /tmp/podman.sock
-    systemd: always
+      DOCKER_HOST: /tmp/docker.sock
+    cgroupns_mode: host
+    privileged: true
     override_command: false
     pre_build_image: true
 
   - name: pterodactyl-wings-debian-11
     image: "docker.io/geerlingguy/docker-debian11-ansible"
     volumes:
-      - /var/run/podman/podman.sock:/tmp/podman.sock
+      - /var/run/docker.sock:/tmp/docker.sock
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
     env:
-      DOCKER_HOST: /tmp/podman.sock
-    systemd: always
+      DOCKER_HOST: /tmp/docker.sock
+    cgroupns_mode: host
+    privileged: true
     override_command: false
     pre_build_image: true
 
   - name: pterodactyl-wings-debian-10
     image: "docker.io/geerlingguy/docker-debian10-ansible"
     volumes:
-      - /var/run/podman/podman.sock:/tmp/podman.sock
+      - /var/run/docker.sock:/tmp/docker.sock
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
     env:
-      DOCKER_HOST: /tmp/podman.sock
-    systemd: always
+      DOCKER_HOST: /tmp/docker.sock
+    cgroupns_mode: host
+    privileged: true
     override_command: false
     pre_build_image: true
 
