--- a/galaxy.yml
+++ b/galaxy.yml
@@ -1,27 +1,26 @@
 authors:
-- Max Hösel <ansible@maxhoesel.de>
+  - Max Hösel <ansible@maxhoesel.de>
 build_ignore:
-- .circleci
-- .github
-- .config
-- .vscode
-- dist
-- CODE_OF_CONDUCT.md
-- CONTRIBUTING.md
-- .yamllint
-- '*.tar.gz'
-- .venv
-- .tox
-- .pytest_cache
-- scripts
-- .pre-commit-config.yaml
-- .readthedocs.yaml
-- pyproject.toml
-- requirements.txt
-- '**/requirements.txt'
+  - .circleci
+  - .github
+  - .vscode
+  - dist
+  - CODE_OF_CONDUCT.md
+  - CONTRIBUTING.md
+  - .yamllint
+  - "*.tar.gz"
+  - .venv
+  - .tox
+  - .pytest_cache
+  - scripts
+  - .pre-commit-config.yaml
+  - .readthedocs.yaml
+  - pyproject.toml
+  - requirements.txt
+  - "**/requirements.txt"
 dependencies:
-  community.crypto: '>=1.0.0'
-  community.general: '>=1.0.0'
+  community.crypto: ">=1.0.0"
+  community.general: ">=1.0.0"
 description: Install and configure the Pterodactyl Gaming Server Panel and Daemon/Wings
 issues: https://github.com/maxhoesel-ansible/ansible-collection-pterodactyl/issues
 license_file: LICENSE
@@ -30,8 +29,8 @@ namespace: maxhoesel
 readme: README.md
 repository: https://github.com/maxhoesel-ansible/ansible-collection-pterodactyl
 tags:
-- pterodactyl
-- application
-- gaming
-- linux
+  - pterodactyl
+  - application
+  - gaming
+  - linux
 version: 2.0.1
