--- a/roles/pterodactyl_wings/molecule/default/molecule.yml
+++ b/roles/pterodactyl_wings/molecule/default/molecule.yml
@@ -1,5 +1,20 @@
 ---
 platforms:
+  - name: pterodactyl-wings-ubuntu-24
+    image: "docker.io/geerlingguy/docker-ubuntu2404-ansible"
+    volumes:
+      # The wings daemon needs to connect to a docker daemon. We use a sibling setup
+      # to allow the wings containers to access the host docker daemon by passing through the docker socket
+      - /var/run/docker.sock:/tmp/docker.sock
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
+    env:
+      # The /tmp/sock workaround is required due to this issue: https://github.com/ansible-community/molecule/issues/1568
+      DOCKER_HOST: /tmp/docker.sock
+    cgroupns_mode: host
+    privileged: true
+    override_command: false
+    pre_build_image: true
+
   - name: pterodactyl-wings-ubuntu-22
     image: "docker.io/geerlingguy/docker-ubuntu2204-ansible"
     volumes:
@@ -44,18 +59,6 @@ platforms:
 
   - name: pterodactyl-wings-debian-11
     image: "docker.io/geerlingguy/docker-debian11-ansible"
-    volumes:
-      - /var/run/docker.sock:/tmp/docker.sock
-      - /sys/fs/cgroup:/sys/fs/cgroup:rw
-    env:
-      DOCKER_HOST: /tmp/docker.sock
-    cgroupns_mode: host
-    privileged: true
-    override_command: false
-    pre_build_image: true
-
-  - name: pterodactyl-wings-debian-10
-    image: "docker.io/geerlingguy/docker-debian10-ansible"
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock
       - /sys/fs/cgroup:/sys/fs/cgroup:rw
