--- a/roles/pterodactyl_wings/molecule/default/converge.yml
+++ b/roles/pterodactyl_wings/molecule/default/converge.yml
@@ -20,7 +20,7 @@
               cert: "/etc/ssl/private/pterodactyl.crt"
               key: "/etc/ssl/private/pterodactyl.key"
             upload_limit: 100
-          remote: https://mypanel.example.com:443
+          remote: https://127.0.0.1:443
           system:
             data: /var/lib/pterodactyl/volumes
             sftp:
