--- a/roles/pterodactyl_panel/molecule/default/molecule.yml
+++ b/roles/pterodactyl_panel/molecule/default/molecule.yml
@@ -49,6 +49,30 @@ platforms:
     networks:
       - name: molecule-pterodactyl-panel
 
+  - name: pterodactyl-panel-debian-13
+    image: "docker.io/geerlingguy/docker-debian13-ansible"
+    groups:
+      - panel
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
+    cgroupns_mode: host
+    privileged: true
+    override_command: false
+    pre_build_image: true
+    networks:
+      - name: molecule-pterodactyl-panel
+  - name: pterodactyl-panel-debian-13-db
+    image: docker.io/mariadb
+    pre_build_image: true
+    override_command: false
+    env:
+      MYSQL_ROOT_PASSWORD: panel_molecule
+      MYSQL_DATABASE: panel_molecule
+      MYSQL_USER: panel_molecule
+      MYSQL_PASSWORD: qw#F8CcMFU%m64o
+    networks:
+      - name: molecule-pterodactyl-panel
+
   - name: pterodactyl-panel-debian-12
     image: "docker.io/geerlingguy/docker-debian12-ansible"
     groups:
